# lifeos

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  GitVersion.yml  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: python_guidelines.instructions.md
.github/workflows/: ci.yml  pages.yml  sonar.yml
docs/: index.md
lifeos/: __init__.py  __main__.py  cli.py
my_assistant/: __init__.py  __main__.py  cli.py
search/: search_index.json
tests/: test_placeholder.py
