[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lifeos"
version = "0.1.0"
description = "Floating AI assistant multi-OS — system monitoring, messaging, AI and external service integrations"
authors = [{name = "chrysa", email = "greau.anthony@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
keywords = ["ai", "assistant", "overlay", "system-monitoring", "notion", "discord"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Desktop Environment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "psutil>=6.0",
    "rich>=13.0",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ui = ["PySide6>=6.7"]
discord = ["discord.py>=2.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "pre-commit>=4.0",
    "pytest-mock>=3.14",
]

[project.scripts]
lifeos = "lifeos.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["lifeos"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "T20", "N", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=lifeos --cov-report=xml --cov-report=term-missing"
